--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -12,7 +12,7 @@
 <body>
   <header>
     {% if page.url == "/" %}
-      <a href="/"><h1>DIArtLOG</h1></a>
+      <a class="page-title" href="/"><h1 >DIArtLOG</h1></a>
     {% endif %}
     {% if page.url != "/" %}
       <a href="/"><h3>DIArtLOG</h3></a>
